# manychat

./: README.md  pyproject.toml
manychat_block/: __init__.py
tests/: test_main.py
