[tool.poetry]
name = "manychat_block"
version = "0.1.1"
description = ""
authors = ["naspa c <naspa612@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = "^3.7.4"
literal = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
